Tabla de las imagenes seleccionadas

--- a/main.ipynb
+++ b/main.ipynb
@@ -773,6 +773,306 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>organ</th>\n",
+       "      <th>data_source</th>\n",
+       "      <th>img_height</th>\n",
+       "      <th>img_width</th>\n",
+       "      <th>pixel_size</th>\n",
+       "      <th>tissue_thickness</th>\n",
+       "      <th>rle</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>266</th>\n",
+       "      <td>32412</td>\n",
+       "      <td>prostate</td>\n",
+       "      <td>HPA</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2888331 67 2891325 76 2894320 84 2897303 104 2...</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>268</th>\n",
+       "      <td>32741</td>\n",
+       "      <td>prostate</td>\n",
+       "      <td>HPA</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>949960 1 952959 2 955958 9 958957 13 961957 16...</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271</th>\n",
+       "      <td>351</td>\n",
+       "      <td>largeintestine</td>\n",
+       "      <td>HPA</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>613460 14 616456 22 619452 29 622438 45 625430...</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>276</th>\n",
+       "      <td>4301</td>\n",
+       "      <td>lung</td>\n",
+       "      <td>HPA</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2242972 45 2245552 16 2245970 49 2248546 25 22...</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>284</th>\n",
+       "      <td>4777</td>\n",
+       "      <td>kidney</td>\n",
+       "      <td>HPA</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2920158 93 2923155 99 2926151 106 2929146 117 ...</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>287</th>\n",
+       "      <td>5086</td>\n",
+       "      <td>lung</td>\n",
+       "      <td>HPA</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1510934 32 1513930 36 1516928 38 1519926 40 15...</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298</th>\n",
+       "      <td>5995</td>\n",
+       "      <td>prostate</td>\n",
+       "      <td>HPA</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>877568 33 877648 24 880566 36 880647 26 883564...</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>6021</td>\n",
+       "      <td>kidney</td>\n",
+       "      <td>HPA</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3962938 30 3965936 34 3968934 38 3971932 41 39...</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300</th>\n",
+       "      <td>6120</td>\n",
+       "      <td>prostate</td>\n",
+       "      <td>HPA</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>685544 13 688543 15 691542 17 694362 34 694529...</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>302</th>\n",
+       "      <td>62</td>\n",
+       "      <td>kidney</td>\n",
+       "      <td>HPA</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4382055 23 4385050 34 4388048 44 4391045 57 43...</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>314</th>\n",
+       "      <td>7359</td>\n",
+       "      <td>lung</td>\n",
+       "      <td>HPA</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4020786 16 4023785 22 4026784 27 4029782 31 40...</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>315</th>\n",
+       "      <td>737</td>\n",
+       "      <td>prostate</td>\n",
+       "      <td>HPA</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2970903 20 2973901 24 2976888 43 2979884 48 29...</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>316</th>\n",
+       "      <td>7397</td>\n",
+       "      <td>prostate</td>\n",
+       "      <td>HPA</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3160782 56 3163780 60 3166779 62 3169777 65 31...</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>324</th>\n",
+       "      <td>8227</td>\n",
+       "      <td>prostate</td>\n",
+       "      <td>HPA</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>529710 25 532708 28 535700 40 538699 43 541698...</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>346</th>\n",
+       "      <td>9517</td>\n",
+       "      <td>kidney</td>\n",
+       "      <td>HPA</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1611763 11 1614753 29 1617750 35 1620746 43 16...</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id           organ data_source  img_height  img_width  pixel_size  \\\n",
+       "266  32412        prostate         HPA        3000       3000         0.4   \n",
+       "268  32741        prostate         HPA        3000       3000         0.4   \n",
+       "271    351  largeintestine         HPA        3000       3000         0.4   \n",
+       "276   4301            lung         HPA        3000       3000         0.4   \n",
+       "284   4777          kidney         HPA        3000       3000         0.4   \n",
+       "287   5086            lung         HPA        3000       3000         0.4   \n",
+       "298   5995        prostate         HPA        3000       3000         0.4   \n",
+       "299   6021          kidney         HPA        3000       3000         0.4   \n",
+       "300   6120        prostate         HPA        3000       3000         0.4   \n",
+       "302     62          kidney         HPA        3000       3000         0.4   \n",
+       "314   7359            lung         HPA        3000       3000         0.4   \n",
+       "315    737        prostate         HPA        3000       3000         0.4   \n",
+       "316   7397        prostate         HPA        3000       3000         0.4   \n",
+       "324   8227        prostate         HPA        3000       3000         0.4   \n",
+       "346   9517          kidney         HPA        3000       3000         0.4   \n",
+       "\n",
+       "     tissue_thickness                                                rle  \\\n",
+       "266                 4  2888331 67 2891325 76 2894320 84 2897303 104 2...   \n",
+       "268                 4  949960 1 952959 2 955958 9 958957 13 961957 16...   \n",
+       "271                 4  613460 14 616456 22 619452 29 622438 45 625430...   \n",
+       "276                 4  2242972 45 2245552 16 2245970 49 2248546 25 22...   \n",
+       "284                 4  2920158 93 2923155 99 2926151 106 2929146 117 ...   \n",
+       "287                 4  1510934 32 1513930 36 1516928 38 1519926 40 15...   \n",
+       "298                 4  877568 33 877648 24 880566 36 880647 26 883564...   \n",
+       "299                 4  3962938 30 3965936 34 3968934 38 3971932 41 39...   \n",
+       "300                 4  685544 13 688543 15 691542 17 694362 34 694529...   \n",
+       "302                 4  4382055 23 4385050 34 4388048 44 4391045 57 43...   \n",
+       "314                 4  4020786 16 4023785 22 4026784 27 4029782 31 40...   \n",
+       "315                 4  2970903 20 2973901 24 2976888 43 2979884 48 29...   \n",
+       "316                 4  3160782 56 3163780 60 3166779 62 3169777 65 31...   \n",
+       "324                 4  529710 25 532708 28 535700 40 538699 43 541698...   \n",
+       "346                 4  1611763 11 1614753 29 1617750 35 1620746 43 16...   \n",
+       "\n",
+       "      age     sex  \n",
+       "266  48.0    Male  \n",
+       "268  57.0    Male  \n",
+       "271  65.0  Female  \n",
+       "276  65.0    Male  \n",
+       "284  61.0    Male  \n",
+       "287  65.0    Male  \n",
+       "298  61.0    Male  \n",
+       "299  41.0  Female  \n",
+       "300  37.0    Male  \n",
+       "302  59.0    Male  \n",
+       "314  43.0  Female  \n",
+       "315  55.0    Male  \n",
+       "316  60.0    Male  \n",
+       "324  37.0    Male  \n",
+       "346  61.0    Male  "
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train[train[\"id\"].isin([62, 351, 4301, 5995, 6021, 6120, 7397, 8227, 7359, 32741, 9517, 737, 4777, 5086, 32412])]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 196,
    "metadata": {},
    "outputs": [],
